@@ -1,7 +1,13 @@
+2006-03-15  David Reveman  <davidr@novell.com>
+
+	* include/compiz.h:
+	* src/event.c (handleEvent):
+	* src/window.c: Add restackWindowBelow.
+
 2006-03-14  David Reveman  <davidr@novell.com>
 
 	* plugins/switcher.c: Opacity, brightness and saturation as adjustable
-	options. (Greg)	
+	options. (Greg)
 
 	* src/window.c (syncWindowPosition): Move frame window now instead of
 	waiting for client window to change before moving it.
